task3/homework_files/emptydir_test_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test
  name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - image: alpine:latest
        name: test
        command: ["sleep"]
        args: ["3600"]
        volumeMounts:
        - mountPath: /test
          name: test-volume
      volumes:
        - name: test-volume
          emptyDir: {}
