task3/homework_files/nfs_test_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: testnfs
  name: testnfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testnfs
  template:
    metadata:
      labels:
        app: testnfs
    spec:
      containers:
      - image: alpine:latest
        name: testnfs
        command: ["sleep"]
        args: ["3600"]
        volumeMounts:
        - mountPath: /test
          name: nfs-test-volume
          readOnly: false
      volumes:
        - name: nfs-test-volume
          persistentVolumeClaim:
            claimName: nfs-claim
