task3/homework_files/minio_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: minio-svc
  name: minio-svc
spec:
  ports:
  - port: 9001
    protocol: TCP
  selector:
    app: minio
  type: ClusterIP
